<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/home" />
    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search" />
    <item
        android:id="@+id/cart"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/cart" />
    <item
        android:id="@+id/orders"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/orders" />
    <item
        android:id="@+id/profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />
</menu>